# asyncio-playground

./: pyproject.toml
src/: scrape_with_xml_concurrent.py  scrape_with_xml_sequential.py  test_xml_streamed_parse_ram_usage.py
