[tool.poetry]
name = "aioxml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.0"
aiohttp = "^3.6.2"
click = "^7.0"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
yapf = "^0.29.0"
rope = "^0.16.0"
guppy3 = "^3.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
